crates/wac-parser/tests/parser/fail/expected-two.wac
package test:comp;

record foo {
